--- a/accounts/templates/accounts/music_profile.html
+++ b/accounts/templates/accounts/music_profile.html
@@ -77,6 +77,31 @@
 				</div>
 			</div>
 		</div>
+			<div class="row">
+				<div class="col-md-12">
+					<div>
+						
+  						<h4><label>Recent Comments...</label></h4><br><hr>
+
+							 	{% for x in comments %}
+							 	<strong>
+							 		{{x.usr}} - 
+							      	
+							      	Posted on: {{x.date_created}}
+							    </strong>
+							    <br>
+							      	{{x.song_comments}}
+							    <br>
+							    <hr>
+							    {% endfor %}
+							  
+							  </tbody>
+							</table>
+  						<br>
+  						<br>
+					</div>
+				</div>
+			</div>
 	</div>
 
 </div>
