--- a/accounts/templates/accounts/records.html
+++ b/accounts/templates/accounts/records.html
@@ -2,7 +2,22 @@
 
    {% block content %}
 
-   <div>Sentiment Records</div>
+   <div class="row">
+		<div class="col-md-12">
+			<div class="row">
+				<div class="col-md-6">
+				</div>
+				<div class="col-md-6">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+				</div>
+				<div class="col-md-6">
+				</div>
+			</div>
+		</div>
+	</div>
 
    {% endblock %}
 	
