--- a/accounts/templates/accounts/music.html
+++ b/accounts/templates/accounts/music.html
@@ -1,7 +1,8 @@
 {% extends 'accounts/main.html' %}
 {% load static %}
 {% block SearchBar %}
-   				<br><center><h3>Here you can search for the music!</h3> 
+   				<br><center><h3>Search the Artist here! </h3>
+          <h3>For 10 latest songs!</h3> 
    					<form method="POST">
    						{% csrf_token %} 
   							<input name="artist" placeholder="Artist Name..." aria-label="Search">
@@ -45,6 +46,25 @@
           </div>
           {% endfor %}
       </div>
+      <ul class = "pagination">
+
+        <li class ="page-item">
+          {% if filter_results.has_previous %}
+            <a class ="page-link" href="?page={{filter_results.previous_page_number}}">Previous</a>
+          {% endif %}
+        </li>
+
+        <li class = "page-item">
+          <a class ="page-link">Page {{filter_results.number}} of {{filter_results.paginator.num_pages}}</a>
+        </li>
+
+        <li class ="page-item">
+          {% if filter_results.has_next %}
+            <a class ="page-link" href="?page={{filter_results.next_page_number}}">Next</a>
+          {% endif %}
+        </li>
+
+      </ul>
       {% endif %}
 
 {% endblock content %}
