Compeleted Like function

--- a/accounts/templates/accounts/music.html
+++ b/accounts/templates/accounts/music.html
@@ -1,4 +1,5 @@
 {% extends 'accounts/main.html' %}
+{% block title %} Music {% endblock title %}
 {% load static %}
 {% block SearchBar %}
    				<br><center><h3>Search the Artist here! </h3>
