--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -1,6 +1,6 @@
 <nav>
       <div class="logo">
-		Welcome, {{request.user}} 
+		Halo, {{request.user}} 
 	 </div>
 	<input type="checkbox" id="click">
       <label for="click" class="menu-btn">
