--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -4,11 +4,14 @@
 
 
   <head>
-    <title>Sentiment System</title>
+    <title>Sentiment System | {% block title %} {% endblock title %}</title>
 
-
+    <!-- Custom css & js  -->
     <link rel="stylesheet" type="text/css" href=" {% static 'css/nav.css' %} ">
     <link rel="stylesheet" type="text/css" href=" {% static 'css/music.css' %} ">
+    <script src="{% static 'css/main.js' %}" defer></script>
+
+    <!-- awasome CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
