--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -43,6 +43,20 @@
 			  		<h3 class="card-title">Users Information: </h3>
 			  	</div>
 			  	<div class="card-body">
+			  			     {% if users.has_previous %}
+			                  <a href="?page2=1" class="btn btn-outline-info btn-sm">&laquo; first</a>
+			                  <a href="?page2={{ users.previous_page_number }}" class="btn btn-outline-info btn-sm">previous</a>
+              				{% endif %}
+
+                			<span class="current">
+                    			<a class="btn btn-sm btn-secondary" disabled >Page {{ users.number }} of {{ users.paginator.num_pages }}</a>
+                			</span>
+
+				              {% if users.has_next %}
+				                  <a href="?page2={{ users.next_page_number }}" class="btn btn-outline-info btn-sm">next</a>
+				                  <a href="?page2={{ users.paginator.num_pages }}" class="btn btn-outline-info btn-sm">last &raquo;</a>
+				              {% endif %}
+				              <br>
 			    	<table class="table table-sm table-striped table-hover">
 						<tr>
 							<th>Users ID: </th>
@@ -72,8 +86,24 @@
 			  		<h3 class="card-title">Users Sentiment Results: </h3>
 			  	</div>
 			  	<div class="card-body">
+
+	                  		{% if comments.has_previous %}
+			                  <a href="?page=1" class="btn btn-outline-info btn-sm">&laquo; first</a>
+			                  <a href="?page={{ comments.previous_page_number }}" class="btn btn-outline-info btn-sm">previous</a>
+              				{% endif %}
+
+                			<span class="current">
+                    			<a class="btn btn-sm btn-secondary" disabled >Page {{ comments.number }} of {{ comments.paginator.num_pages }}</a>
+                			</span>
+
+				              {% if comments.has_next %}
+				                  <a href="?page={{ comments.next_page_number }}" class="btn btn-outline-info btn-sm">next</a>
+				                  <a href="?page={{ comments.paginator.num_pages }}" class="btn btn-outline-info btn-sm">last &raquo;</a>
+				              {% endif %}
+				              <br>
 			    	<table class="table table-sm table-striped table-hover">
 						<tr>
+							<!-- <th>No.</th> -->
 							<th>Username: </th>
 							<th>Sentiment Results: </th>
 							<th>Song Name: </th>
@@ -81,7 +111,7 @@
 						</tr>
 						{% for comment in comments %}
 						<tr>
-
+							<!-- <td>{{ forloop.counter }}</td> -->
 							<td>{{comment.usr}}</td>
 							<td>{{comment.sentiment_result}}</td>
 							<td><a href ="{% url 'music_profile' comment.song.id %}">{{comment.song.Song_name}}</a></td>
