--- a/accounts/templates/accounts/recommendation.html
+++ b/accounts/templates/accounts/recommendation.html
@@ -3,7 +3,68 @@
 
    {% block content %}
 
-   <div>Recommendation</div>
+<div class="container-fluid">
+<br>
+<br>
+<br>
+	<div class="row">
+		<div class="col-md-12">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="card-header">
+					  	<h4 class="card-title">Just Updated</h4>
+					</div>
+					<div class="card-body">
+					  		{% if just_updated_song %}
+					  			<div class="row">
+					  				{% for x in just_updated_song %}
+										<div class="col-sm-3">
+						            		<div class="box-element music">
+						              			<a href ="{% url 'music_profile' x.id %}"><img src="{{x.Song_image}}" width="250px", height="250px"></a>
+						              			<h3><strong>{{x.Song_name}}</strong></h3>
+						              			<h5>{{x.artist_name}}</h5>
+						            		</div>
+						            			<br>
+						          		</div>
+						          	{% endfor %}
+						      	</div>
+						    {% endif %}
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+<br>
+<br>
+<br>
+	<div class="row">
+		<div class="col-md-12">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="card-header">
+					  	<h4 class="card-title">Positive Feeling</h4>
+					</div>
+					<div class="card-body">
+					  		{% if positive_comm %}
+					  			<div class="row">
+					  				{% for x in positive_comm %}
+										<div class="col-sm-3">
+						            		<div class="box-element music">
+						              			<a href ="{% url 'music_profile' x.song.id %}"><img src="{{x.song.Song_image}}" width="250px", height="250px"></a>
+						              			<h3><strong>{{x.song.Song_name}}</strong></h3>
+						              			<h5>{{x.song.artist_name}}</h5>
+						            		</div>
+						            			<br>
+						          		</div>
+						          	{% endfor %}
+						      	</div>
+						    {% endif %}
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
    {% endblock %}
 
