--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 
-	<title>Register</title>
+	<title>Sentiment System | Register</title>
 
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -36,6 +36,11 @@
                   <div class="form-group">
                      <label>User Name: </label>
                      {{form.username}}   
+                  </div>
+
+                  <div class="form-group">
+                     <label>Email: </label>
+                     {{form.email}}  
                   </div>
                   
                   <div class="form-group">
