--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -51,7 +51,9 @@
                   
                </form>
 
-               <a href = "{% url 'register' %}" > <button type="submit" class="btn btn-secondary">Dont't hv an Account --> Register Here</button> </a>
+                Dont't hv an Account? --> <a href = "{% url 'register' %}" ><button type="submit" class="btn btn-secondary"> Register Here!</button> </a><br><br>
+
+               Forget Password? --><a href = "{% url 'reset_password' %}" > <button type="submit" class="btn btn-secondary">Reset Password Here!</button> </a>
             </div>
          </div>
       </div>
