--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -59,7 +59,7 @@
                   
                </form>
 
-               <a href = "{% url 'login' %}" > <button type="submit" class="btn btn-secondary">Already hv an Account --> Login Here</button> </a>
+               Already hv an Account? --> <a href = "{% url 'login' %}" > <button type="submit" class="btn btn-secondary">Login Here</button> </a>
             </div>
          </div>
       </div>
