--- a/accounts/templates/accounts/password_reset_done.html
+++ b/accounts/templates/accounts/password_reset_done.html
@@ -1,3 +1,7 @@
+{% extends 'accounts/main.html' %}
+{% block title %} Password Reset Complete {% endblock title %}
+{% load static %}
+{% block content %}
 <h3>Password Reset Complete</h3>
 
 <p>
@@ -5,3 +9,5 @@
 </p>
 
 <a href="/">Login</a>
+
+{% endblock content %}
