--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -13,6 +13,7 @@
 		<li><a href="{% url 'music' %}">Music</a></li>
 		<li><a href="{% url 'recommendation' %}">Recommendation</a></li>
 		<li><a href="{% url 'records' %}">Records</a></li>
+		<li><a href="{% url 'edit_profile' %}">Edit Profile</a></li>
 		<li><a href="{% url 'logout' %}">Logout</a></li>
 	  </ul>
 </nav>
