--- a/accounts/templates/accounts/password_change.html
+++ b/accounts/templates/accounts/password_change.html
@@ -1,15 +1,18 @@
 
 {% extends 'accounts/main.html' %}
-{% block title %} Enter New Password {% endblock title %}
+{% block title %} Change Password {% endblock title %}
 {% load static %}
-{% block content %}
-<h3>Enter New Password</h3>
 
-<p>Please enter your new password twice so we can verify you typed it in correctly.</p>
+
+{% block content %}
+<h3> Change Password</h3>
+
+<p>Please enter your old password, for security’s sake, and then enter your new password twice so we can verify you typed it in correctly.</p>
 
 <form method="post">
 	{% csrf_token %}
 	{{form.as_p}}
 	<button type="Submit" class="btn btn-success">Change My Password</button>
 </form>
+
 {% endblock content %}
