--- a/accounts/templates/accounts/password_reset.html
+++ b/accounts/templates/accounts/password_reset.html
@@ -1,11 +1,15 @@
-
-
+{% extends 'accounts/main.html' %}
+{% block title %} Password Reset {% endblock title %}
+{% load static %}
+{% block content %}
 <h3> Password Reset</h3>
 
 <p>Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.</p>
 
 <form method="post">
 	{% csrf_token %}
-	{{form}}
-	<input type="Submit" name="sent email">
+	{{form.as_p}}
+	<button type="Submit" class="btn btn-success">Change My Password</button>
 </form>
+
+{% endblock content %}
