--- a/accounts/templates/accounts/music_profile.html
+++ b/accounts/templates/accounts/music_profile.html
@@ -61,9 +61,9 @@
 									<form action="{% url 'like_post' song.pk %}" method="POST">
 										{% csrf_token %}
 										{% if liked %}
-											<button type="submit" name="song.id" value="{{ song.id }}" class="btn btn-outline-danger">Unlike</button> - {{ total_likes }} Likes
+											<button type="submit" name="song.id" value="{{ song.id }}" class="btn btn-outline-danger">Liked ❤️️</button> → {{ total_likes }} Likes
 										{% else %}
-											<button type="submit" name="song.id" value="{{ song.id }}" class="btn btn-outline-primary">Like</button> - {{ total_likes }} Likes
+											<button type="submit" name="song.id" value="{{ song.id }}" class="btn btn-outline-primary">Like ✅</button> → {{ total_likes }} Likes
 										{% endif %}
 									</form>
 								</td>
