--- a/accounts/templates/accounts/password_reset_sent.html
+++ b/accounts/templates/accounts/password_reset_sent.html
@@ -1,8 +1,9 @@
 {% extends 'accounts/main.html' %}
-{% block title %} Password reset sent {% endblock title %}
+{% block title %} Password Reset Sent {% endblock title %}
 {% load static %}
 {% block content %}
-
+<br>
+<br>
 <h3>Password reset sent</h3>
 
 <p>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.</p>
