--- a/accounts/templates/accounts/music_profile.html
+++ b/accounts/templates/accounts/music_profile.html
@@ -104,7 +104,10 @@
 							      	Posted on: {{x.date_created}}
 							    
 							    <br>
-							      	{{x.song_comments}}
+							      	{{x.song_comments}} 👉
+							      	
+							      	<b>{{x.sentiment_result}}</b>
+							      	
 							    <br>
 							    <hr>
 							    {% endfor %}
